[package]
name = "pathfinder-cli"
version = "0.1.0"
authors = ["adam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinder = { version = ">0.0" }

[patch.crates-io]
pathfinder = { git = 'https://github.com/uavaustin/pathfinder.git' }