[package]
name = "pathfinder-cli"
version = "0.1.0"
authors = ["adam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
clap = { version = "2.33", features = ["yaml"] }
hex = "0.4"
pathfinder = "1.1"
prost = "0.7"

[build-dependencies]
prost-build = "0.7"

[patch.crates-io]
pathfinder = { git = "https://github.com/uavaustin/pathfinder.git" }
